--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,23 @@ body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(180deg, #5700FF 0%, #31009C 100%);
 }
+
+.btn-used, .accordeon-used{
+  background: #FFF;
+  color: #000;
+  cursor: pointer;
+}
+
+.btn-used::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  border-radius: 9999px;
+  z-index: 1;
+  transform: scale(0.96);
+  border: 1px solid gray;
+}
