--- a/app/globals.css
+++ b/app/globals.css
@@ -32,3 +32,13 @@ body {
   color: #000;
   cursor: pointer;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
